# luna

./: .gitignore  LICENSE.md  Makefile  Makefile.Android  luna.sln  make.bat
src/: main.cpp
src/Android/Android.NativeActivity/: Android.NativeActivity.vcxproj
src/Android/Android.Packaging/: Android.Packaging.androidproj
src/Android/Android.Packaging/res/values/: strings.xml
src/Shared/: Shared.cpp  Shared.vcxproj  Shared.vcxproj.filters
src/android/app/: build.gradle
src/android/app/src/androidTest/java/com/luna/: ExampleInstrumentedTest.java
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
src/android/app/src/main/java/com/luna/: MainActivity.java
src/android/app/src/test/java/com/luna/: ExampleUnitTest.java
src/android/gradle/wrapper/: gradle-wrapper.properties
src/shared/: canvas.cpp  canvas.h  editor.h  editor.hpp  event.h  event_manager.cpp  event_manager.h  luna.cpp  luna.h  luna.hpp  renderer.cpp  renderer.h  timer.h  types.h
src/shared/editor/: editor.h
src/shared/events/: event.h  event_manager.cpp  event_manager.h
src/shared/rendering/: canvas.h  rectangle.h  renderer.cpp  renderer.h
src/shared/utils/: logger.h  profiler.cpp  profiler.h  types.h
src/web/: .gitignore  index.html  index.js  main.cpp  make.bat
src/windows/: CmakeLists.txt  main.cpp  make.bat  sdl2-config.cmake
